--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,9 @@
-<h1>
-  {{title}}
-</h1>
+<router-outlet></router-outlet>
+
+
+
+<!--<ul>
+  <li *ngFor="let i of item | async">
+    {{i.$value}}
+  </li>
+</ul>-->
